--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.not-found{
+  position:fixed;
+  top:0;
+  width:100%;
+  height:100vh;
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
